# FreeyaAuerinCatherine_bot_app

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/freeyaauerincatherine_bot_app/: LICENSE  pubspec.yaml
package/freeyaauerincatherine_bot_app/example/: freeyaauerincatherine_bot_app_example.dart
package/freeyaauerincatherine_bot_app/lib/: freeyaauerincatherine_bot_app.dart
package/freeyaauerincatherine_bot_app/test/: freeyaauerincatherine_bot_app_test.dart
package/freeyaauerincatherine_bot_app_android/: README.md  pubspec.yaml
package/freeyaauerincatherine_bot_app_android/lib/: freeyaauerincatherine_bot_app_android.dart
package/freeyaauerincatherine_bot_app_android/test/: freeyaauerincatherine_bot_app_android_test.dart
package/freeyaauerincatherine_bot_app_apis/: pubspec.yaml
package/freeyaauerincatherine_bot_app_apis/example/: freeyaauerincatherine_bot_app_apis_example.dart
package/freeyaauerincatherine_bot_app_apis/lib/: freeyaauerincatherine_bot_app_apis.dart
package/freeyaauerincatherine_bot_app_apis/test/: freeyaauerincatherine_bot_app_apis_test.dart
package/freeyaauerincatherine_bot_app_cli/: pubspec.yaml
package/freeyaauerincatherine_bot_app_cli/example/: freeyaauerincatherine_bot_app_cli_example.dart
package/freeyaauerincatherine_bot_app_cli/lib/: freeyaauerincatherine_bot_app_cli.dart
package/freeyaauerincatherine_bot_app_cli/test/: freeyaauerincatherine_bot_app_cli_test.dart
package/freeyaauerincatherine_bot_app_client/: pubspec.yaml
package/freeyaauerincatherine_bot_app_client/lib/: freeyaauerincatherine_bot_app_client.dart
package/freeyaauerincatherine_bot_app_dart/: pubspec.yaml
package/freeyaauerincatherine_bot_app_flutter/: pubspec.yaml
package/freeyaauerincatherine_bot_app_fucshia/: pubspec.yaml
package/freeyaauerincatherine_bot_app_ios/: pubspec.yaml
package/freeyaauerincatherine_bot_app_linux/: pubspec.yaml
package/freeyaauerincatherine_bot_app_macos/: pubspec.yaml
package/freeyaauerincatherine_bot_app_server/: pubspec.yaml
package/freeyaauerincatherine_bot_app_web/: pubspec.yaml
package/freeyaauerincatherine_bot_app_windows/: pubspec.yaml
test/: freeyaauerincatherine_bot_app_test.dart
(+22 files in other folders)
